# iot-identity-service-agent

./: README.md  TestAgent.sln
DataGenerator/: DataGenerator.cs  DataGenerator.csproj
Device.Identity.x509/: Device.Identity.x509.csproj  IdentityInfo.cs  NativeMethods.cs  Program.cs
Module.Identity.Sas/: IdentityInfo.cs  Module.Identity.Sas.csproj  Program.cs
Module.Identity.Sas.Rust/: Cargo.toml
Module.Identity.Sas.Rust/src/: error.rs  main.rs
